WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279036
REGRESSION(
279868@main
) Alaska Airlines sign in popup loads behind the website's search field
https://bugs.webkit.org/show_bug.cgi?id=279036
Summary
REGRESSION(279868@main) Alaska Airlines sign in popup loads behind the websit...
Matt Woodrow
Reported
2024-09-02 14:53:56 PDT
<
rdar://134911588
> Load
https://www.alaskaair.com/search/results?A=1&C=0&L=0&O=SAN&D=OAK&OD=2024-10-11&DD=2024-10-19&RT=true
Click sign-in Observer sign-in panel underneath titlebar.
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2024-09-02 15:00:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33045
EWS
Comment 2
2024-09-11 18:07:36 PDT
Committed
283515@main
(73e553cb3575): <
https://commits.webkit.org/283515@main
> Reviewed commits have been landed. Closing PR #33045 and removing active labels.
EWS
Comment 3
2024-09-16 13:39:14 PDT
Committed
280938.338@safari-7619-branch
(f7c9e214a8fa): <
https://commits.webkit.org/280938.338@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1777 and removing active labels.
EWS
Comment 4
2024-09-17 19:51:50 PDT
Committed
283286.63@safari-7620-branch
(3ec59befdc48): <
https://commits.webkit.org/283286.63@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1768 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug